--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>test</title>
-  <link rel="stylesheet" href="aos-master/src/sass/aos.scss">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -59,83 +59,255 @@
       </ul>
 
 
-        <!-- modal -->
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary mt-1" data-toggle="modal" data-target="#exampleModal">
-          <strong>Login/Register</strong>
-        </button>
-    
-        <!-- Modal -->
-        <div class="modal fade hide" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-          aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                ...
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-              </div>
+      <!-- modal -->
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-primary mt-1" data-toggle="modal" data-target="#exampleModal">
+        <strong>Login/Register</strong>
+      </button>
+
+      <!-- Modal -->
+      <div class="modal fade hide" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
             </div>
           </div>
-        </div>      
-        <!-- modal ends -->
-
-    </div>
-  </div>
-  </nav>
-
-  <div class="container-fluid" id="konten1"> 
-    <p>.</p>
-  <div class="isi_konten1 mx-5" id="konten_1">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <h1 class="text-center mb-3 text-white">A Clean and Modern Template </h1>
-          <h5 class="text-center mb-5 text-white">Get your freebie template Now!</h5>
-          <img src="img/bg-img/device.png" class="d-block w-75 rounded mx-auto img-fluid" alt="...">
-        </div>
-        <div class="carousel-item">
-          <h1 class="text-center mb-3 text-white">A Clean and Modern Template 2 </h1>
-          <h5 class="text-center mb-5 text-white">Get your freebie template Now!</h5>
-          <img src="img/bg-img/device.png" class="d-block w-75 rounded mx-auto img-fluid" alt="...">
-        </div>
-        <div class="carousel-item">
-          <h1 class="text-center mb-3 text-white">A Clean and Modern Template 3</h1>
-          <h5 class="text-center mb-5 text-white">Get your freebie template Now!</h5>
-          <img src="img/bg-img/device.png" class="d-block w-75 rounded mx-auto img-fluid" alt="...">
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+      <!-- modal ends -->
+
+    </div>
+    </div>
+  </nav>
+
+  <div class="container-fluid" id="konten1">
+    <p>.</p>
+    <div class="isi_konten1 mx-5 mb-5" id="konten_1">
+      <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <h1 class="text-center mb-3 text-white">A Clean and Modern Template </h1>
+            <h5 class="text-center mb-5 text-white">Get your freebie template Now!</h5>
+            <img src="img/bg-img/device.png" class="d-block w-75 rounded mx-auto img-fluid" alt="...">
+            <!-- <a href="#" id="down">
+            <h1 class="text-center">scroll down</h1>
+          </a> -->
+          </div>
+          <div class="carousel-item">
+            <h1 class="text-center mb-3 text-white">A Clean and Modern Template 2 </h1>
+            <h5 class="text-center mb-5 text-white">Get your freebie template Now!</h5>
+            <img src="img/bg-img/device.png" class="d-block w-75 rounded mx-auto img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <h1 class="text-center mb-3 text-white">A Clean and Modern Template 3</h1>
+            <h5 class="text-center mb-5 text-white">Get your freebie template Now!</h5>
+            <img src="img/bg-img/device.png" class="d-block w-75 rounded mx-auto img-fluid" alt="...">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls1" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls1" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="container-fluid mt-5 mb-5" id="konten2">
+    <!-- <div class="container"> -->
+    <div class="row mt-5" id="konten_carousel2">
+      <div class="col-md-12 mt-5">
+        <div id="carouselExampleControls2" class="carousel slide mt-5" data-ride="carousel">
+
+          <div class="carousel-inner">
+            <div data-aos="fade-down" data-aos-duration="500">
+              <div class="carousel-item active">
+                <div class="row mx-5">
+
+                  <div class="col-md-4 text-center">
+                    <div class="card mx-1">
+                      <div class="card-body">
+                        <div class="card-title">
+                          <h1 class="display-4 text-secondary">
+                            03.
+                          </h1>
+                          <h4 class="mt-3 card-text">Modern Design</h4>
+                          <p class="mt-5 card-text">Etiam Nec Odio vetibulum est mattis effic iturut
+                            magna.pellentesque sit am et tellus blandit. Etiam
+                            nec odio vestibul
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4 text-center">
+                    <div class="card mx-1">
+                      <div class="card-body">
+                        <div class="card-title">
+                          <h1 class="display-4 text-secondary">
+                            04.
+                          </h1>
+                          <h4 class="mt-3 card-text">Modern Design</h4>
+                          <p class="mt-5 card-text">Etiam Nec Odio vetibulum est mattis effic iturut
+                            magna.pellentesque sit am et tellus blandit. Etiam
+                            nec odio vestibul
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4 text-center">
+                    <div class="card mx-1">
+                      <div class="card-body">
+                        <div class="card-title">
+                          <h1 class="display-4 text-secondary">
+                            05.
+                          </h1>
+                          <h4 class="mt-3 card-text">Modern Design</h4>
+                          <p class="mt-5 card-text">Etiam Nec Odio vetibulum est mattis effic iturut
+                            magna.pellentesque sit am et tellus blandit. Etiam
+                            nec odio vestibul
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row mx-5">
+                  <div class="col-md-4 text-center">
+                    <div class="card mx-1">
+                      <div class="card-body">
+                        <div class="card-title">
+                          <h1 class="display-4 text-secondary">
+                            06.
+                          </h1>
+                          <h4 class="mt-3 card-text">Modern Design</h4>
+                          <p class="mt-5 card-text">Etiam Nec Odio vetibulum est mattis effic iturut
+                            magna.pellentesque sit am et tellus blandit. Etiam
+                            nec odio vestibul
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4 text-center">
+                    <div class="card mx-1">
+                      <div class="card-body">
+                        <div class="card-title">
+                          <h1 class="display-4 text-secondary">
+                            07.
+                          </h1>
+                          <h4 class="mt-3 card-text">Modern Design</h4>
+                          <p class="mt-5 card-text">Etiam Nec Odio vetibulum est mattis effic iturut
+                            magna.pellentesque sit am et tellus blandit. Etiam
+                            nec odio vestibul
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4 text-center">
+                    <div class="card mx-1">
+                      <div class="card-body">
+                        <div class="card-title">
+                          <h1 class="display-4 text-secondary">
+                            08.
+                          </h1>
+                          <h4 class="mt-3 card-text">Modern Design</h4>
+                          <p class="mt-5 card-text">Etiam Nec Odio vetibulum est mattis effic iturut
+                            magna.pellentesque sit am et tellus blandit. Etiam
+                            nec odio vestibul
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- <div class="carousel-item">
+                <img class="d-block w-100" src="..." alt="Third slide">
+              </div> -->
+
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- button -->
+    <div data-aos="zoom-in-up">
+      <div class="row justify-content-center button2">
+        <div class="col-md-4 text-center mt-5 mb-5">
+          <a href="" class="btn text-white btnDiscovery" style="border-radius: 80px;height: 70px; width: 250px;">
+            <p class="mt-2 mb-5" style="font-weight:bold;font-size: 24px;">Discovery</p>
+          </a>
+        </div>
+      </div>
     </div>
   </div>
-    
+
+  <div class="container-fluid mb-5" id="konten3">
+    <div class="container">
+      <div data-aos="flip-down" data-aos-duration="1000">
+      <div class="row konten3">
+        <div class="col-md-12 text-center mt-5">
+          <p class="text-secondary mt-5">Clients</p>
+          <h2 class="">All our clients love our work</h3>
+        </div>
+      </div>
+    </div>
+
+    <div data-aos="fade-left" data-aos-duration="1500">
+      <div class="row mt-5">
+        <div class="col-md-12 mt-5">
+          <img src="img/clients-img/1.png" class="img-fluid mr-5 mt-5" alt="">
+          <img src="img/clients-img/2.png" class="img-fluid mx-5 mt-4" alt="">
+          <img src="img/clients-img/3.png" class="img-fluid mx-5 mt-4" alt="">
+          <img src="img/clients-img/4.png" class="img-fluid mx-5 mt-4" alt="">
+          <img src="img/clients-img/5.png" class="img-fluid mx-4 mt-4" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
   </div>
 
-  <div class="container-fluid" id="konten2">
-    <img src="img/bg-img/features-2.png" alt="">
-  </div>
+  <div class="container-fluid" id="konten5">
+    <div class="container konten5">
+      <h1><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur adipisci ullam fuga a quae quo distinctio dolorum quaerat blanditiis nisi voluptate rerum suscipit perferendis magni alias minima cupiditate, atque eos.</p></h1>
+    </div>
 
+  </div>
 
   <script src="bootstrap/jquery-3.4.1.min.js"></script>
   <script src="bootstrap/popper.min.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
-  <script src="aos-master/src/js/aos.js"></script>
   <script src="script_home.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
   <script>
     AOS.init();
@@ -143,22 +315,3 @@
 </body>
 
 </html>
-
-<!-- 
-<nav class="navbar navbar-expand-lg fixed-top">
-    <div class="container-fluid">
-        <img src="img/core-img/logo.png" class="img-fluid mx-3" alt="">
-        <button class="navbar-toggler bg-white" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon text-dark"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav mx-auto">
-                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Features</a>
-                <a class="nav-item nav-link" href="#">Pricing</a>
-                <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </div>
-        </div>
-    </div>
-</nav> -->
