--- a/home.html
+++ b/home.html
@@ -8,6 +8,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="plugin/owl.carousel.min.css">
+    <link rel="stylesheet" href="plugin/owl.theme.default.css">
 </head>
 
 <body>
@@ -130,147 +132,36 @@
     </div>
 
     <div class="container-fluid" id="konten2">
-
-        <div class="row">
-            <div class="col-md-12 mt-5">
-                <div id="carouselExampleControls2" class="carousel slide mt-5" data-ride="carousel">
-
-                    <div class="carousel-inner">
-                        <div data-aos="fade-down" data-aos-duration="1000">
-                            <div class="carousel-item active">
-                                <div class="row mx-5">
-
-                                    <div class="col-md-4 text-center">
-                                        <div class="card mx-1">
-                                            <div class="card-body">
-                                                <div class="card-title">
-                                                    <h1 class="display-4 text-secondary">
-                                                        03.
-                                                    </h1>
-                                                    <h4 class="mt-3 card-text">Modern Design</h4>
-                                                    <p class="mt-5 card-text">Etiam Nec Odio vetibulum est mattis effic
-                                                        iturut
-                                                        magna.pellentesque sit am et tellus blandit. Etiam
-                                                        nec odio vestibul
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 text-center">
-                                        <div class="card mx-1">
-                                            <div class="card-body">
-                                                <div class="card-title">
-                                                    <h1 class="display-4 text-secondary">
-                                                        04.
-                                                    </h1>
-                                                    <h4 class="mt-3 card-text">Modern Design</h4>
-                                                    <p class="mt-5 card-text">Etiam Nec Odio vetibulum est mattis effic
-                                                        iturut
-                                                        magna.pellentesque sit am et tellus blandit. Etiam
-                                                        nec odio vestibul
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 text-center">
-                                        <div class="card mx-1">
-                                            <div class="card-body">
-                                                <div class="card-title">
-                                                    <h1 class="display-4 text-secondary">
-                                                        05.
-                                                    </h1>
-                                                    <h4 class="mt-3 card-text">Modern Design</h4>
-                                                    <p class="mt-5 card-text">Etiam Nec Odio vetibulum est mattis effic
-                                                        iturut
-                                                        magna.pellentesque sit am et tellus blandit. Etiam
-                                                        nec odio vestibul
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <div class="row mx-5">
-                                    <div class="col-md-4 text-center">
-                                        <div class="card mx-1">
-                                            <div class="card-body">
-                                                <div class="card-title">
-                                                    <h1 class="display-4 text-secondary">
-                                                        06.
-                                                    </h1>
-                                                    <h4 class="mt-3 card-text">Modern Design</h4>
-                                                    <p class="mt-5 card-text">Etiam Nec Odio vetibulum est mattis effic
-                                                        iturut
-                                                        magna.pellentesque sit am et tellus blandit. Etiam
-                                                        nec odio vestibul
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 text-center">
-                                        <div class="card mx-1">
-                                            <div class="card-body">
-                                                <div class="card-title">
-                                                    <h1 class="display-4 text-secondary">
-                                                        07.
-                                                    </h1>
-                                                    <h4 class="mt-3 card-text">Modern Design</h4>
-                                                    <p class="mt-5 card-text">Etiam Nec Odio vetibulum est mattis effic
-                                                        iturut
-                                                        magna.pellentesque sit am et tellus blandit. Etiam
-                                                        nec odio vestibul
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 text-center">
-                                        <div class="card mx-1">
-                                            <div class="card-body">
-                                                <div class="card-title">
-                                                    <h1 class="display-4 text-secondary">
-                                                        08.
-                                                    </h1>
-                                                    <h4 class="mt-3 card-text">Modern Design</h4>
-                                                    <p class="mt-5 card-text">Etiam Nec Odio vetibulum est mattis effic
-                                                        iturut
-                                                        magna.pellentesque sit am et tellus blandit. Etiam
-                                                        nec odio vestibul
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- <div class="carousel-item">
-                            <img class="d-block w-100" src="..." alt="Third slide">
-                          </div> -->
-
-                        </div>
-                        <a class="carousel-control-prev" href="#carouselExampleControls2" role="button"
-                            data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleControls2" role="button"
-                            data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
+        <div class="row mx-2 text-sm-center">
+            <div class="col-md-12">
+                <div class="owl-carousel owl-theme">
+                    <div class="item" style="width:500px">
+                        <h1 class="display-4 text-secondary">03.</h1>
+                        <h2 class="text-secondary">Modern Design</h2>
+                        <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+                            corporis velit molestiae eum quas dolorem maxime sequi culpa voluptate dolor earum </p>
+                    </div>
+                    <div class="item" style="width:500px">
+                        <h1 class="display-4 text-secondary">04.</h1>
+                        <h2 class="text-secondary">No 1 In sales</h2>
+                        <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+                            corporis velit molestiae eum quas dolorem maxime sequi culpa voluptate dolor earum </p>
+                    </div>
+                    <div class="item" style="width:500px">
+                        <h1 class="display-4 text-secondary">05.</h1>
+                        <h2 class="text-secondary">Modern Design</h2>
+                        <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+                            corporis velit molestiae eum quas dolorem maxime sequi culpa voluptate dolor earum </p>
                     </div>
                 </div>
             </div>
         </div>
 
+
+
         <div class="row">
             <div class="col-md-12">
-                <div data-aos="zoom-in-up" data-aos-duration="1000">
+                <div data-aos="zoom-out-up" data-aos-duration="1000">
                     <div class="row justify-content-center button2">
                         <div class="col-md-4 text-center mt-5 mb-5">
                             <a href="" class="btn text-white btnDiscovery"
@@ -284,7 +175,7 @@
         </div>
 
         <div class="row mt-5 justify-content-center">
-            <div data-aos="zoom-out-up" data-aos-duration="1000">
+            <div data-aos="zoom-out-down" data-aos-duration="1000">
                 <div class="col-md-12 mt-5 text-center">
                     <p class="text-secondary" style="font-weight: bold;">Clients</p>
                     <h2 style="font-weight: bold;">All Our clients love our works</h2>
@@ -293,12 +184,30 @@
 
             <!-- </div> -->
         </div>
+        <div class="row mt-5 mb-5">
+            <div class="col-md-12 text-center mb-5">
+                <img src="img/clients-img/1.png" class="img-fluid mr-5 mt-5" alt="">
+                <img src="img/clients-img/2.png" class="img-fluid mx-5 mt-4" alt="">
+                <img src="img/clients-img/3.png" class="img-fluid mx-5 mt-4" alt="">
+                <img src="img/clients-img/4.png" class="img-fluid mx-5 mt-4" alt="">
+                <img src="img/clients-img/5.png" class="img-fluid mx-4 mt-4" alt="">
+            </div>
+        </div>
     </div>
 
     <div class="container-fluid" id="konten_progres">
         <div class="row">
             <div class="col-md-6 mt-5">
                 <img src="img/bg-img/features.png" class="img-fluid w-75 mt-5" alt="">
+            </div>
+            <div class="col-md-6 mt-5">
+                <p class="text-secondary mt-5" style="font-weight: bold;">Clients</p>
+                <h1 class="text-white" style="font-weight:bold">What You get if you start your business with us</h1>
+                <p class="mt-5 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi molestias autem
+                    repellat at iure esse blanditiis dolorem inventore beatae laudantium. Sed corrupti, ullam voluptate
+                    earum corporis voluptas doloremque quidem vitae? Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Eos, rem soluta. Ad temporibus assumenda facere laborum culpa, voluptate veniam, debitis
+                    eveniet dolor, facilis commodi fuga aut repudiandae sit quia illum?</p>
             </div>
         </div>
     </div>
@@ -308,6 +217,7 @@
 
 
     <script src="bootstrap/jquery-3.4.1.min.js"></script>
+    <script src="plugin/owl.carousel.min.js"></script>
     <script src="bootstrap/popper.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="script_home1.js"></script>
