selesai sampai konten 4 index

--- a/home.html
+++ b/home.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="style1.css">
     <link rel="stylesheet" href="plugin/owl.carousel.min.css">
     <link rel="stylesheet" href="plugin/owl.theme.default.css">
+
+
 </head>
 
 <body>
@@ -132,26 +134,28 @@
     </div>
 
     <div class="container-fluid" id="konten2">
-        <div class="row mx-2 text-sm-center">
-            <div class="col-md-12">
-                <div class="owl-carousel owl-theme">
-                    <div class="item" style="width:500px">
-                        <h1 class="display-4 text-secondary">03.</h1>
-                        <h2 class="text-secondary">Modern Design</h2>
-                        <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-                            corporis velit molestiae eum quas dolorem maxime sequi culpa voluptate dolor earum </p>
-                    </div>
-                    <div class="item" style="width:500px">
-                        <h1 class="display-4 text-secondary">04.</h1>
-                        <h2 class="text-secondary">No 1 In sales</h2>
-                        <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-                            corporis velit molestiae eum quas dolorem maxime sequi culpa voluptate dolor earum </p>
-                    </div>
-                    <div class="item" style="width:500px">
-                        <h1 class="display-4 text-secondary">05.</h1>
-                        <h2 class="text-secondary">Modern Design</h2>
-                        <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-                            corporis velit molestiae eum quas dolorem maxime sequi culpa voluptate dolor earum </p>
+        <div class="row mx-2 text-sm-center mt-5">
+            <div data-aos="zoom-out-down" data-aos-duration="1000">
+                <div class="col-md-12">
+                    <div class="owl-carousel owl-theme">
+                        <div class="item" style="width:500px">
+                            <h1 class="display-4 text-secondary">03.</h1>
+                            <h2 class="text-secondary">Modern Design</h2>
+                            <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+                                corporis velit molestiae eum quas dolorem maxime sequi culpa voluptate dolor earum </p>
+                        </div>
+                        <div class="item" style="width:500px">
+                            <h1 class="display-4 text-secondary">04.</h1>
+                            <h2 class="text-secondary">No 1 In sales</h2>
+                            <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+                                corporis velit molestiae eum quas dolorem maxime sequi culpa voluptate dolor earum </p>
+                        </div>
+                        <div class="item" style="width:500px">
+                            <h1 class="display-4 text-secondary">05.</h1>
+                            <h2 class="text-secondary">Modern Design</h2>
+                            <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+                                corporis velit molestiae eum quas dolorem maxime sequi culpa voluptate dolor earum </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -185,15 +189,18 @@
             <!-- </div> -->
         </div>
         <div class="row mt-5 mb-5">
-            <div class="col-md-12 text-center mb-5">
-                <img src="img/clients-img/1.png" class="img-fluid mr-5 mt-5" alt="">
-                <img src="img/clients-img/2.png" class="img-fluid mx-5 mt-4" alt="">
-                <img src="img/clients-img/3.png" class="img-fluid mx-5 mt-4" alt="">
-                <img src="img/clients-img/4.png" class="img-fluid mx-5 mt-4" alt="">
-                <img src="img/clients-img/5.png" class="img-fluid mx-4 mt-4" alt="">
+            <div data-aos="zoom-in-down" data-aos-duration="1000" class="mx-auto">
+                <div class="col-md-12 mb-5">
+                    <img src="img/clients-img/1.png" class="img-fluid mr-5 mt-5" alt="">
+                    <img src="img/clients-img/2.png" class="img-fluid mx-5 mt-4" alt="">
+                    <img src="img/clients-img/3.png" class="img-fluid mx-5 mt-4" alt="">
+                    <img src="img/clients-img/4.png" class="img-fluid mx-5 mt-4" alt="">
+                    <img src="img/clients-img/5.png" class="img-fluid mx-4 mt-4" alt="">
+                </div>
             </div>
         </div>
     </div>
+
 
     <div class="container-fluid" id="konten_progres">
         <div class="row">
@@ -208,10 +215,83 @@
                     earum corporis voluptas doloremque quidem vitae? Lorem ipsum dolor sit amet consectetur adipisicing
                     elit. Eos, rem soluta. Ad temporibus assumenda facere laborum culpa, voluptate veniam, debitis
                     eveniet dolor, facilis commodi fuga aut repudiandae sit quia illum?</p>
+                <div data-aos="zoom-in-down" data-aos-duration="1500">
+                    <p class="text-secondary mt-5 text-sm-center">Development</p>
+                    <div class="progress w-100 mx-auto">
+                        <div class="progress-bar" id="progressbar" role="progressbar" style="color:transparent;"></div>
+                    </div>
+                    <p class="text-secondary mt-4 text-sm-center">Design</p>
+                    <div class="progress w-100 mx-auto">
+                        <div class="progress-bar" id="progressbar2" style="color:transparent"></div>
+                    </div>
+                    <p class="text-secondary mt-4 text-sm-center">SEO</p>
+                    <div class="progress w-100 mx-auto mb-5">
+                        <div class="progress-bar" id="progressbar3" aria-valuemax="100" style="color:transparent;">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
+    <div class="container-fluid" id="konten4">
+        <div data-aos="fade-right" data-aos-easing="ease-in-sine" data-aos-offset="300">
+            <div class="row">
+                <div class="col-md-3 mt-5 mb-5 text-center">
+                    <div class="card card1">
+                        <div class="card-img-top text-sm-center mt-4">
+                            <img src="img/core-img/trophy.png" class="img-fluid" alt="">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="mt-4 card-title" style="font-weight: bold;">No 1 in sales</h5>
+                            <p class="text-secondary card-text small mt-4">Lorem, ipsum dolor sit amet consectetur
+                                adipisicing elit. Non excepturi totam quod alias nostrum molestias architecto qui
+                                repudiandae</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 mt-5 mb-5 text-center">
+                    <div class="card card2">
+                        <div class="card-img-top text-sm-center mt-4">
+                            <img src="img/core-img/edit.png" class="img-fluid" alt="">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="mt-4 card-title" style="font-weight: bold;">Documentation Inside</h5>
+                            <p class="text-secondary card-text small mt-4">Lorem, ipsum dolor sit amet consectetur
+                                adipisicing elit. Non excepturi totam quod alias nostrum molestias architecto qui
+                                repudiandae</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 mt-5 mb-5 text-center">
+                    <div class="card card3">
+                        <div class="card-img-top text-sm-center mt-4">
+                            <img src="img/core-img/video-camera.png" class="img-fluid" alt="">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="mt-4 card-title" style="font-weight: bold;">Modern Design</h5>
+                            <p class="text-secondary card-text small mt-4">Lorem, ipsum dolor sit amet consectetur
+                                adipisicing elit. Non excepturi totam quod alias nostrum molestias architecto qui
+                                repudiandae</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 mt-5 mb-5 text-center">
+                    <div class="card card4">
+                        <div class="card-img-top mt-4">
+                            <img src="img/core-img/presentation.png" class="img-fluid" alt="">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="mt-4 card-title" style="font-weight: bold;">Marketing Strategist</h5>
+                            <p class="text-secondary card-text small mt-4">Lorem, ipsum dolor sit amet consectetur
+                                adipisicing elit. Non excepturi totam quod alias nostrum molestias architecto qui
+                                repudiandae</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
