sampai konten nav tab

--- a/home.html
+++ b/home.html
@@ -134,31 +134,71 @@
     </div>
 
     <div class="container-fluid" id="konten2">
-        <div class="row mx-2 text-sm-center mt-5">
+        <div class="row text-sm-center mt-5">
+            <div class="col-md-12">
             <div data-aos="zoom-out-down" data-aos-duration="1000">
-                <div class="col-md-12">
-                    <div class="owl-carousel owl-theme">
-                        <div class="item" style="width:500px">
-                            <h1 class="display-4 text-secondary">03.</h1>
-                            <h2 class="text-secondary">Modern Design</h2>
-                            <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-                                corporis velit molestiae eum quas dolorem maxime sequi culpa voluptate dolor earum </p>
+                <div class="owl-carousel owl-theme owl-loaded owl-refresh">
+                    <div class="owl-stage-outer">
+                        <div class="owl-stage">
+                            <div class="owl-item">
+                                <div class="card text-center">
+                                    <div class="card-body">
+                                        <div class="card-title">
+                                            <h1 class="display-4 text-secondary">03.</h1>
+                                            <h5 class="card-title">Modern Design</h3>
+                                                <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, accusantium. Laborum adipisci</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="owl-item">
+                                <div class="card text-center">
+                                    <div class="card-body">
+                                        <div class="card-title">
+                                            <h1 class="display-4 text-secondary">04.</h1>
+                                            <h5 class="card-title">No 1 In Sales</h3>
+                                                <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, accusantium. Laborum adipisci</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="owl-item">
+                                <div class="card text-center">
+                                    <div class="card-body">
+                                        <div class="card-title">
+                                            <h1 class="display-4 text-secondary">05.</h1>
+                                            <h5 class="card-title">Online Marketing</h3>
+                                                <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, accusantium. Laborum adipisci</p>
+                                        </div>
+                                    </div>
+                                </div>
+                              
+                            </div>
+                            <div class="owl-item">
+                                <div class="card text-center">
+                                    <div class="card-body">
+                                        <div class="card-title">
+                                            <h1 class="display-4 text-secondary">06.</h1>
+                                            <h5 class="card-title">Online Marketing</h3>
+                                                <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, accusantium. Laborum adipisci</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="item" style="width:500px">
-                            <h1 class="display-4 text-secondary">04.</h1>
-                            <h2 class="text-secondary">No 1 In sales</h2>
-                            <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-                                corporis velit molestiae eum quas dolorem maxime sequi culpa voluptate dolor earum </p>
-                        </div>
-                        <div class="item" style="width:500px">
-                            <h1 class="display-4 text-secondary">05.</h1>
-                            <h2 class="text-secondary">Modern Design</h2>
-                            <p class="text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-                                corporis velit molestiae eum quas dolorem maxime sequi culpa voluptate dolor earum </p>
-                        </div>
+                    </div>
+                    <!-- <div class="owl-nav">
+                        <div class="owl-prev">prev</div>
+                        <div class="owl-next">next</div>
+                    </div> -->
+                    <div class="owl-dots">
+                        <div class="owl-dot active"><span></span></div>
+                        <div class="owl-dot"><span></span></div>
+                        <div class="owl-dot"><span></span></div>
                     </div>
                 </div>
             </div>
+        </div>
         </div>
 
 
@@ -293,12 +333,190 @@
         </div>
     </div>
 
+    <div class="jumbotron" id="konten5">
+        <div class="row">
+            <div class="col-md-12 text-center mb-5">
+                <p class="text-secondary" style="font-weight: bold;">Our Work</p>
+                <h4 class="" style="font-weight: bold;">See Our Online Portofolio</h4>
+            </div>
+        </div>
+        <div class="row">   
+            <div class="col-md-12">
+                <ul class="nav justify-content-center mb-3" id="pills-tab" role="tablist">
+                    <li class="nav-item ">
+                      <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">
+                          <p class="text-secondary">All</p></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">
+                          <p class="text-secondary">Graphic Design</p></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">
+                          <p class="text-secondary">Brand Identity</p></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="pills-photo-tab" data-toggle="pill" href="#pills-photo" role="tab" aria-controls="pills-photo" aria-selected="false">
+                            <p class="text-secondary">photogrpahy</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="pills-web-design" data-toggle="pill" href="#pills-web_design" role="tab" aria-controls="pills-web" aria-selected="false">
+                            <p class="text-secondary">Web Design</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="pills-printing-tab" data-toggle="pill" href="#pills_printing" role="tab" aria-controls="pills-web" aria-selected="false">
+                            <p class="text-secondary">Printing Colaterall</p>
+                        </a>
+                    </li>
+                  </ul>
+                  <div class="tab-content" id="pills-tabContent">
+                      <!-- all content -->
+                    <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+                        <div class="row" style="background-color: transparent;">
+                            <div class="card-group">
+                                <div class="card" data-aos="fade-right" data-aos-duration="1000">
+                                    <img src="img/portfolio-img/1.jpg" class="img-fluid"alt="">
+                                </div>
+                                <div class="card" data-aos="fade-right" data-aos-duration="1000">
+                                    <img src="img/portfolio-img/2.jpg" class="img-fluid"  alt="">
+                                </div>
+                                <div class="card" data-aos="fade-left" data-aos-duration="1000">
+                                    <img src="img/portfolio-img/3.jpg" class="img-fluid" alt="">
+                                </div>
+                                <div class="card" data-aos="fade-left" data-aos-duration="1000">
+                                    <img src="img/portfolio-img/4.jpg" class="img-fluid" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row" style="background-color: transparent;">
+                            <div class="card-group">
+                                <div class="card" data-aos="fade-right" data-aos-duration="1000">
+                                    <img src="img/portfolio-img/5.jpg" class="img-fluid"alt="">
+                                </div>
+                                <div class="card" data-aos="fade-right" data-aos-duration="1000">
+                                    <img src="img/portfolio-img/6.jpg" class="img-fluid"  alt="">
+                                </div>
+                                <div class="card" data-aos="fade-left" data-aos-duration="1000">
+                                    <img src="img/portfolio-img/7.jpg" class="img-fluid" alt="">
+                                </div>
+                                <div class="card" data-aos="fade-left" data-aos-duration="1000">
+                                    <img src="img/portfolio-img/8.jpg" class="img-fluid" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Graphic Design -->
+                    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+                        <div class="row" style="background-color: transparent;">
+                            <div class="card-group">
+                                <div class="card" data-aos="fade-up" data-aos-duration="1000">
+                                    <img src="img/portfolio-img/5.jpg" class="img-fluid"alt="">
+                                </div>
+                                <div class="card" data-aos="fade-up" data-aos-duration="1000">
+                                    <img src="img/portfolio-img/6.jpg" class="img-fluid"  alt="">
+                                </div>
+                                <div class="card" data-aos="fade-down" data-aos-duration="1000">
+                                    <img src="img/portfolio-img/1.jpg" class="img-fluid" alt="">
+                                </div>
+                                <div class="card" data-aos="fade-down" data-aos-duration="1000">
+                                    <img src="img/portfolio-img/4.jpg" class="img-fluid" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Brand Identity -->
+                    <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+                        <div class="row" style="background-color: transparent;">
+                            <div class="card-group">
+                                <div class="card">
+                                    <img src="img/portfolio-img/4.jpg" class="img-fluid"alt="">
+                                </div>
+                                <div class="card">
+                                    <img src="img/portfolio-img/2.jpg" class="img-fluid"  alt="">
+                                </div>
+                                <div class="card">
+                                    <img src="img/portfolio-img/1.jpg" class="img-fluid" alt="">
+                                </div>
+                                <div class="card">
+                                    <img src="img/portfolio-img/7.jpg" class="img-fluid" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- photgraphy -->
+                    <div class="tab-pane fade" id="pills-photo" role="tabpanel" aria-labelledby="pills-photo-tab"> 
+                        <div class="row" style="background-color: transparent;">
+                            <div class="card-group">
+                                <div class="card">
+                                    <img src="img/portfolio-img/12.jpg" class="img-fluid"alt="">
+                                </div>
+                                <div class="card">
+                                    <img src="img/portfolio-img/11.jpg" class="img-fluid"  alt="">
+                                </div>
+                                <div class="card">
+                                    <img src="img/portfolio-img/10.jpg" class="img-fluid" alt="">
+                                </div>
+                                <div class="card">
+                                    <img src="img/portfolio-img/9.jpg" class="img-fluid" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- web design -->
+                    <div class="tab-pane fade" id="pills-web_design" role="tabpanel" aria-labelledby="pills-web-design"> 
+                        <div class="row" style="background-color: transparent;">
+                            <div class="card-group">
+                                <div class="card">
+                                    <img src="img/portfolio-img/1.jpg" class="img-fluid"alt="">
+                                </div>
+                                <div class="card">
+                                    <img src="img/portfolio-img/12.jpg" class="img-fluid"  alt="">
+                                </div>
+                                <div class="card">
+                                    <img src="img/portfolio-img/4.jpg" class="img-fluid" alt="">
+                                </div>
+                                <div class="card">
+                                    <img src="img/portfolio-img/8.jpg" class="img-fluid" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- printing colaterall -->
+                    <div class="tab-pane fade" id="pills_printing" role="tabpanel" aria-labelledby="pills-printing-tab"> 
+                        <div class="row" style="background-color: transparent;">
+                            <div class="card-group">
+                                <div class="card">
+                                    <img src="img/portfolio-img/12.jpg" class="img-fluid"alt="">
+                                </div>
+                                <div class="card">
+                                    <img src="img/portfolio-img/6.jpg" class="img-fluid"  alt="">
+                                </div>
+                                <div class="card">
+                                    <img src="img/portfolio-img/1.jpg" class="img-fluid" alt="">
+                                </div>
+                                <div class="card">
+                                    <img src="img/portfolio-img/9.jpg" class="img-fluid" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid" id="konten6">
+        
+    </div>
+
 
 
 
     <script src="bootstrap/jquery-3.4.1.min.js"></script>
-    <script src="plugin/owl.carousel.min.js"></script>
     <script src="bootstrap/popper.min.js"></script>
+    <script src="plugin/owl.carousel.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="script_home1.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
