selesai konten about_us

--- a/about.html
+++ b/about.html
@@ -204,7 +204,7 @@
         </div>
     </div>
 
-    <div class="container-fluid" id="konten4">
+    <div class="container-fluid mb-5" id="konten4">
         <div class="row">
             <div class="col-md-6" id="konten4_1" data-aos="fade-right" data-aos-duration="800"
             data-aos-offset="300"
@@ -231,6 +231,52 @@
             <div class="col-md-6" id="konten4_2" data-aos="fade-left" data-aos-duration="800"
             data-aos-offset="300"
             data-aos-easing="ease-in-sine"></div>
+        </div>
+    </div>
+
+    <div class="container-fluid mb-5" id="konten5">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <h2 class="" style="font-weight: bold;">
+                    Meet Our Incredible team</h2>
+                    <p class="text-muted mt-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto hic reiciendis, fugit veniam excepturi corporis sequi odio ipsam? Officia soluta sint molestias in odio exercitationem repellendus voluptas distinctio voluptatum iste?</p>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <img src="img/bg-img/ceo.jpg" class="rounded-circle img-fluid w-50" alt="">
+                    <h5 class="ml-2 mt-4" style="font-weight:bold;">Michael Kelog</h5>
+                    <p class="text-muted" style="font-weight: bold;">Developer</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="img/bg-img/c-2.jpg" class="rounded-circle img-fluid w-50" alt="">
+                    <h5 class="ml-2 mt-4" style="font-weight:bold;">William Donovan</h5>
+                    <p class="text-muted" style="font-weight: bold;">Digital Designer</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="img/bg-img/c-1.jpg" class="rounded-circle img-fluid w-50" alt="">
+                    <h5 class="ml-2 mt-4" style="font-weight:bold;">Cristine Smith</h5>
+                    <p class="text-muted" style="font-weight: bold;">CEO Company</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="container-fluid mt-3" id="konten6">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 mt-5 text-center">
+                    <p class="text-secondary mt-5" style="font-weight: bold;">Give us a shout</p>
+                    <h1 class="mt-3" style="font-weight: bold;">Subscribe to our newsletter</h1>
+                    <div class="input-group mt-5">
+                        <input type="text" class="form-control" placeholder="Enter Your Email Here" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                        <div class="input-group-append">
+                          <span class="input-group-text" style="font-weight:bold;color: #fff;background-color: #280a3d;" id="basic-addon2">subscribe</span>
+                        </div>
+                      </div>
+                </div>
+            </div>
         </div>
     </div>
 
