--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0 mx-auto">
                 <li class="nav-item active mr-4 mt-3">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="home.html">Home</a>
                 </li>
                 <li class="nav-item dropdown mr-4 mt-3">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -49,7 +49,7 @@
                     <a class="nav-link" href="#">About us</a>
                 </li>
                 <li class="nav-item mr-4 mt-3">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="services.html">Services</a>
                 </li>
                 <li class="nav-item mr-4 mt-3">
                     <a class="nav-link" href="#">Portofolio</a>
@@ -268,7 +268,7 @@
             <div class="row">
                 <div class="col-md-12 mt-5 text-center">
                     <p class="text-secondary mt-5" style="font-weight: bold;">Give us a shout</p>
-                    <h1 class="mt-3" style="font-weight: bold;">Subscribe to our newsletter</h1>
+                    <h1 class="mt-3" style="font-weight: bold;">Subscribe to our Newsletter</h1>
                     <div class="input-group mt-5">
                         <input type="text" class="form-control" placeholder="Enter Your Email Here" aria-label="Recipient's username" aria-describedby="basic-addon2">
                         <div class="input-group-append">
